Fix auth API
