# src/stocks/routes.js
@@ -6,7 +6,8 @@ const {
   getAllStocks,
   getStockByIDHandler,
   postIncomingStockHandler,
-  postOutgoingStockHandler
+  postOutgoingStockHandler,
+  getCSVData
   } = require("./handler")
 
 router.use(verifyToken)
@@ -15,5 +16,6 @@ router.get("/", getAllStocks)
 router.get("/:stockId", getStockByIDHandler)
 router.post("/incoming", postIncomingStockHandler)
 router.post("/outgoing", postOutgoingStockHandler)
+router.post("/export", getCSVData)
 
 module.exports = router
